disabled: use not-allowed cursor; dim breather

--- a/src/htdocs/css/_settingsBar.scss
+++ b/src/htdocs/css/_settingsBar.scss
@@ -78,6 +78,13 @@
       color: $text-color-disabled;
       cursor: auto;
     }
+    input {
+      cursor: not-allowed;
+    }
+
+    .breather span {
+      background: #ccc;
+    }
   }
 
   .refresh {
