--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 @use '../util/mixins' as *;
 @use '../util/variables' as *;
 
@@ -127,7 +129,7 @@
       }
 
       sup {
-        color: $text-color-lightest;
+        color: color.adjust($text-color-lightest, $alpha: -0.25);
         font-size: .75rem;
         position: absolute;
         right: -.75rem;
