--- a/src/htdocs/css/util/_functions.scss
+++ b/src/htdocs/css/util/_functions.scss
@@ -1,13 +1,15 @@
 @use 'sass:math';
 
+@use 'variables' as *;
+
 // Convert px to rem
 @function px-to-rem($px-value) {
-	@return ($px-value / 16) + rem;
+	@return ($px-value / $font-size) + rem;
 }
 
 // Convert rem to px
 @function rem-to-px($rem-value) {
-	@return ($rem-value * 16) + px;
+	@return ($rem-value * $font-size) + px;
 }
 
 // Replace characters in a string.
