--- a/src/htdocs/css/features/_index.scss
+++ b/src/htdocs/css/features/_index.scss
@@ -4,7 +4,7 @@
 @use 'forecast';
 @use 'mainshock';
 @use 'pager';
+@use 'pager-exposures';
 @use 'shakeAlert';
 @use 'shakemapStations';
 @use 'significantEqs';
-
