--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -179,6 +179,30 @@
     max-width: none;
   }
 
+  .pager-exposures {
+    table {
+      width: 100%;
+    }
+  }
+
+  .pager-loss {
+    &.bubble {
+      padding: 1rem .5rem;
+    }
+
+    h4 {
+      margin-bottom: 0;
+
+      &:nth-of-type(2) {
+        margin-top: 1.5rem;
+      }
+    }
+
+    img {
+      max-width: 100%;
+    }
+  }
+
   .products {
     align-items: flex-start;
     display: flex;
