--- a/src/htdocs/css/features/_pager.scss
+++ b/src/htdocs/css/features/_pager.scss
@@ -37,8 +37,14 @@
   }
 
   .loss {
+    width: calc(400px - rem-to-px(1));
+
     h4 {
       margin: 1.5rem 0 0;
+    }
+
+    p {
+      margin: 0;
     }
   }
 
@@ -68,69 +74,4 @@
         width: 100%;
       }
     }
-}
-
-#summaryPane {
-  .pager-exposures {
-    table {
-      width: 100%;
-    }
-  }
-
-  .pager-loss {
-    &.bubble {
-      padding: 1rem .5rem;
-    }
-
-    h4 {
-      margin-bottom: 0;
-
-      &:nth-of-type(2) {
-        margin-top: 1.5rem;
-      }
-    }
-
-    img {
-      max-width: 100%;
-    }
-  }
-}
-
-table.exposures {
-  margin: 0;
-
-  tbody tr {
-    border-bottom: none; // override general table border styles
-    border-top: 1px solid $border-color-lighter;
-
-    &.city,
-    &:first-child {
-      border: none;
-    }
-  }
-
-  td,
-  th {
-    padding: 0.25rem .375rem;
-
-    &:nth-child(1) {
-      width: 3.5rem;
-      padding-left: .25rem;
-    }
-    &:nth-child(3) {
-      padding-right: .25rem;
-      text-align: right;
-    }
-  }
-  td {
-    font-weight: 500;
-  }
-
-  .city td {
-    color: $text-color-lighter;
-    font-weight: 400;
-    line-height: 1.4;
-    padding-bottom: .375rem;
-    padding-top: .125rem;
-  }
 }
