capitalize type labels on binned tables

--- a/src/htdocs/css/features/util/_earthquakes.scss
+++ b/src/htdocs/css/features/util/_earthquakes.scss
@@ -73,6 +73,7 @@
         font-weight: 400;
         padding-right: 2px;
         text-align: right;
+        text-transform: capitalize;
       }
 
       &.rowlabel {
