--- a/src/htdocs/css/util/_lightbox.scss
+++ b/src/htdocs/css/util/_lightbox.scss
@@ -32,6 +32,10 @@
     cursor: auto;
   }
 
+  dl.props:not(.alt) {
+    margin-top: 2rem;
+  }
+
   h3 {
     align-items: center;
     background: $bg-color;
@@ -86,24 +90,21 @@
   }
 
   .status {
-    margin: 1.5rem 0 0;
-
-    &:before {
-      @include labels;
-
-      content: 'Status';
-      margin-right: .5rem;
-    }
+    text-transform: capitalize;
 
     i {
       margin-left: .25rem;
     }
-
-    span { // nested (span) tag and inline-block are necessary for text-transform
-      display: inline-block;
-      text-transform: capitalize;
-    }
   }
+}
+
+
+/* Toggle between user/UTC time
+--------------------------------------------- */
+
+body.user .lightbox time.utc,
+body.utc .lightbox time.user {
+  display: none;
 }
 
 @media only screen
