--- a/src/htdocs/css/util/_lightbox.scss
+++ b/src/htdocs/css/util/_lightbox.scss
@@ -38,7 +38,7 @@
 
   h3 {
     align-items: center;
-    background: $bg-color;
+    background: linear-gradient($bg-color, $bg-color-alpha);
     font-size: 1.625rem;
     gap: 0 .5rem;
     margin: 0;
