add Nearby Cities to Mainshock’s summary

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -195,6 +195,18 @@
     }
   }
 
+  .nearby-cities {
+    li {
+      margin: .125rem 0;
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+  }
+
   .notice {
     margin-top: .75rem;
     max-width: none;
