use consistent margin-top

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -195,6 +195,7 @@
     }
   }
 
+  .links,
   .nearby-cities {
     li {
       margin: .125rem 0;
@@ -202,7 +203,7 @@
 
     ul {
       list-style: none;
-      margin: 0;
+      margin: 1.25rem 0 0 0;
       padding: 0;
     }
   }
