add text shadow

--- a/src/htdocs/css/util/controls/_radiobar.scss
+++ b/src/htdocs/css/util/controls/_radiobar.scss
@@ -39,6 +39,7 @@ ul.options {
       border-radius: 0;
       color: $bg-color;
       cursor: auto;
+      text-shadow: $button-text-shadow;
       transition: all $effect-on-duration ease-out;
     }
   }
