--- a/src/htdocs/css/util/controls/_switch.scss
+++ b/src/htdocs/css/util/controls/_switch.scss
@@ -22,7 +22,7 @@
       box-sizing: content-box;
       color: $text-color;
       cursor: pointer;
-      font-size: 1.0625rem;
+      font-size: 1.125rem;
       margin: 0;
       padding: 0;
       position: relative;
@@ -40,7 +40,7 @@
 
       span {
         left: 2.25rem;
-        line-height: 1.25rem;
+        line-height: 1;
         padding-left: .5rem;
         position: absolute;
         top: 0;
