--- a/src/htdocs/css/util/_impactBubbles.scss
+++ b/src/htdocs/css/util/_impactBubbles.scss
@@ -16,7 +16,7 @@ a.impact-bubble:hover {
   display: flex;
   flex-direction: column;
   letter-spacing: .03rem;
-  line-height: 1rem;
+  line-height: 1.25;
   max-width: 6rem;
   min-width: 3.5rem;
   overflow: hidden;
