--- a/src/htdocs/css/util/_variables.scss
+++ b/src/htdocs/css/util/_variables.scss
@@ -18,6 +18,8 @@ $font-family-mmi: Tahoma, Verdana, Segoe, sans-serif;
 $font-size: 16px;
 $font-size-smaller: .875rem;
 
+$line-height: 1.625;
+
 $sidebar-width: 400px;
 
 /* Colors */
