--- a/src/htdocs/css/features/_pager.scss
+++ b/src/htdocs/css/features/_pager.scss
@@ -8,7 +8,7 @@
 
   img {
     max-width: 100%;
-    width: calc(400px - rem-to-px(1));
+    width: calc($panel-width - rem-to-px(1));
   }
 
   p {
@@ -36,12 +36,12 @@
     }
 
     table {
-      width: calc(400px - rem-to-px(2));
+      width: calc($panel-width - rem-to-px(2));
     }
   }
 
   .loss {
-    width: calc(400px - rem-to-px(1));
+    width: calc($panel-width - rem-to-px(1));
 
     h4 {
       margin: 1.5rem 0 0;
