--- a/src/htdocs/css/util/_variables.scss
+++ b/src/htdocs/css/util/_variables.scss
@@ -20,8 +20,8 @@ $font-size-smaller: .875rem;
 
 $line-height: 1.625;
 
-$panel-width: 400px;
-$sidebar-width: 400px;
+$panel-width: 25rem;
+$sidebar-width: 25rem;
 
 /* Colors */
 
