--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -12,6 +12,11 @@
     display: inline-block;
   }
 
+  .bubble.hide,
+  .feature.hide { // missing product(s)
+    display: none;
+  }
+
   .container {
     display: flex;
     flex-direction: column;
