--- a/src/htdocs/css/features/_historical-events.scss
+++ b/src/htdocs/css/features/_historical-events.scss
@@ -5,6 +5,11 @@
     flex-wrap: wrap;
     gap: 2rem 3.5rem;
     margin-top: 1.5rem;
+    padding-bottom: .5rem;
+  }
+
+  h3 {
+    margin-top: 0;
   }
 
   .mmi {
