--- a/src/htdocs/css/features/_historical-events.scss
+++ b/src/htdocs/css/features/_historical-events.scss
@@ -1,19 +1,49 @@
-.historical-events {
-  > div {
-    align-items: flex-start;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem 3.5rem;
-    margin-top: 1.5rem;
-    padding-bottom: .5rem;
+@use '../util/variables' as *;
+
+#summaryPane {
+  .historical {
+    container-type: inline-size;
   }
 
-  h3 {
-    margin-top: 0;
+  .historical-events {
+    max-width: 100%;
+
+    > div {
+      align-items: flex-start;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem 3rem;
+      margin-top: 1.5rem;
+      padding-bottom: .5rem;
+
+      div {
+        max-width: 100%;
+        width: calc($panel-width - 2rem);
+      }
+    }
+
+    h3 {
+      margin-top: 0;
+    }
+
+    .mmi {
+      align-items: center;
+      display: flex;
+      gap: 0 .375rem;
+    }
   }
 
-  .mmi {
-    display: flex;
-    gap: 0 .375rem;
-  }
+  @container (min-width: calc(2 * #{$panel-width} + 1rem))
+    and (max-width: calc(3 * #{$panel-width} + 2rem)) {
+      .historical-events {
+        width: calc(2 * $panel-width + 1rem);
+      }
+    }
+
+  @container (min-width: #{$panel-width})
+    and (max-width: calc(2 * #{$panel-width} + 1rem)) {
+      .historical-events {
+        width: $panel-width;
+      }
+    }
 }
