add DD container to selector

--- a/src/htdocs/css/features/_historical-events.scss
+++ b/src/htdocs/css/features/_historical-events.scss
@@ -1,7 +1,8 @@
 @use '../util/variables' as *;
 
 #summaryPane {
-  .historical {
+  .historical,
+  .dd-historical {
     container-type: inline-size;
   }
 
