add text-shadow to buttons

--- a/src/htdocs/css/util/controls/_buttons.scss
+++ b/src/htdocs/css/util/controls/_buttons.scss
@@ -22,6 +22,7 @@ a.button {
     background: $accent-color;
     color: $bg-color;
     transition: all $effect-on-duration ease-out;
+    text-shadow: $button-text-shadow;
   }
 }
 
