improve fault visibility on alternate base layers

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -29,6 +29,11 @@
     animation: none; /* plays every time layer control is displayed */
   }
 
+  .faults img,
+  .plates img {
+    transition: all 0.2s linear;
+  }
+
   /**
    * Rendering order of Features on the map and layer controller. All overlays
    * are rendered in leaflet-overlay-pane which has a z-index of 400.
@@ -90,5 +95,28 @@
       .leaflet-control-attribution {
         display: none;
       }
+  }
+}
+
+body {
+  &.dark {
+    .faults img,
+    .plates img {
+      filter: brightness(135%) contrast(125%);
+    }
+  }
+
+  &.satellite {
+    .faults img,
+    .plates img {
+      filter: brightness(125%) contrast(175%) saturate(125%);
+    }
+  }
+
+  &.terrain {
+    .faults img,
+    .plates img {
+      filter: contrast(125%);
+    }
   }
 }
