use flex-end, which has broader support

--- a/src/htdocs/css/features/util/_earthquakes.scss
+++ b/src/htdocs/css/features/util/_earthquakes.scss
@@ -7,7 +7,7 @@
     align-items: center;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: start;
+    justify-content: flex-end;
     margin-top: -.5rem;
 
     label {
